--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -17,7 +17,7 @@ ul {
 li {
   float: right;
   height: 100%;
-  width: 5%;
+  width: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
