--- a/src/app/static-listing/static-listing.component.scss
+++ b/src/app/static-listing/static-listing.component.scss
@@ -7,9 +7,9 @@ a {
   height: 20%;
   padding: 1em;
   margin: .5em;
-  background: $secondaryColor;
+  @include set-height(2);
 }
 
 a:hover {
-  background: $secondaryLight;
+  @include set-hover(2);
 }
