--- a/src/app/static-listing/static-listing.component.scss
+++ b/src/app/static-listing/static-listing.component.scss
@@ -6,9 +6,10 @@
 
 .mdc-button {
   display: block;
+  text-align: center;
+  
   width: 98%;
-  height: 20%;
-  padding: 1em;
+  height: 5%;
   margin: 1em auto;
   @include mdc-button-container-fill-color(get-height-color(6));
   @include mdc-button-ink-color($mdc-theme-on-background);
@@ -23,5 +24,5 @@
 }
 
 .borderLegend {
-  padding: auto 5%;
+  padding: 0 5%;
 }
